--- a/.github/workflows/close-pull-request.yml
+++ b/.github/workflows/close-pull-request.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Close PR with nice message
-        run: gh pr close ${{ env.ISSUE }} -c "${{ env.COMMENT }}"
+        run: gh pr close ${{ .env.ISSUE }} -c "${{ .env.COMMENT }}"
         working-directory: ${{ github.workspace }}
         env:
           COMMENT: >
